<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LB Mobile Banking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="application">Welcome To Our Mobile Banking Application</string>
    <string name="home">Home</string>
    <string name="barcode">Read \n Barcode</string>
    <string name="call">Call Us</string>
    <string name="messages">Messages</string>
    <string name="help">Help</string>
    <string name="us_flag">USA flag</string>
    <string name="full_report">View full report</string>
    <string name="login_page">Login Page</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="type">Type</string>
    <string name="remember">Remember me</string>
    <string name="login_problems">Problems During Login?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="change_lang">Change Language</string>
    <string name="geo">GEO</string>
    <string name="eng">ENG</string>

</resources>