<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom" >

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_grey" >

        <Button
            android:id="@+id/button5"
            style="@drawable/bottom_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_buttons"
            android:fitsSystemWindows="true"
            android:freezesText="false"
            android:gravity="center"
            android:text="@string/home"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button5"
            android:background="@drawable/bottom_buttons"
            android:ellipsize="middle"
            android:gravity="center"
            android:text="@string/barcode"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="9sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom|center"
            android:layout_toRightOf="@+id/button6"
            android:background="@drawable/bottom_buttons"
            android:gravity="center"
            android:text="@string/call"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom|center"
            android:layout_toRightOf="@+id/button7"
            android:background="@drawable/bottom_buttons"
            android:gravity="center"
            android:text="@string/messages"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom|center"
            android:layout_toRightOf="@+id/button8"
            android:background="@drawable/bottom_buttons"
            android:gravity="center"
            android:text="@string/help"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </RelativeLayout>

</RelativeLayout>