<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".FirstScreen" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/grey"
        android:gravity="center"
        android:text="@string/application"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="57dp"
        android:background="@color/silver" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/news" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/map" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@style/AppBaseTheme"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/button5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:fadingEdge="horizontal|vertical"
            android:fitsSystemWindows="false"
            android:freezesText="false"
            android:gravity="bottom|center"
            android:text="@string/home"
            android:textAlignment="gravity"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="bottom|center"
            android:text="@string/barcode"
            android:textAlignment="gravity"
            android:textSize="9sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center"
            android:text="@string/call"
            android:textAlignment="gravity"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center"
            android:text="@string/messages"
            android:textAlignment="gravity"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center"
            android:text="@string/help"
            android:textAlignment="gravity"
            android:textSize="10sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginRight="53dp"
        android:background="@drawable/circle_textview"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circle_textview"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView3"
        android:background="@drawable/circle_textview"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/textView5"
        android:background="@drawable/circle_textview"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView3"
        android:layout_marginRight="28dp"
        android:layout_toLeftOf="@+id/textView3"
        android:background="@drawable/circle_textview"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/xr"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/us_flag"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:src="@drawable/usa" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignTop="@+id/button2"
        android:background="@drawable/login_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:background="@drawable/signup_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/textView5"
        android:gravity="center_vertical|center_horizontal"
        android:text="OR"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>