<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/u2_normal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/grey"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_page"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="48dp"
        android:background="@drawable/u4_normal"
        android:gravity="center_vertical|center_horizontal" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout3"
        android:background="@drawable/u4_normal"
        android:gravity="center_vertical|center_horizontal" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout4"
        android:background="@drawable/u41_normal" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:gravity="center_vertical|center_horizontal" >

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="76dp"
                android:layout_marginTop="20dp"
                android:text="@string/type" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="68dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/relativeLayout6"
        android:background="@drawable/user_password"
        android:ems="10"
        android:paddingLeft="5dp" />

    <include
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/footer_layout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout4"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginBottom="15dp"
        android:text="@string/password" />

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@+id/relativeLayout8"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="180dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_margin="1dp"
            android:background="@drawable/spinner_view"
            android:dropDownSelector="@android:color/black" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/editText1"
        android:background="@drawable/user_password"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="5dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="47dp"
        android:background="@color/grey"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_problems"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/relativeLayout9"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginBottom="28dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/button1" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_on"
            android:gravity="center_vertical|start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/toggle_button"
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:text="@string/remember"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</RelativeLayout>