<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/grey"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="@drawable/u4_normal"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/relativeLayout4"
            android:gravity="center_vertical"
            android:paddingRight="15dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/toggle_on"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/eng"
                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentRight="true"
                android:background="@drawable/toggle_button"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/relativeLayout4"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="48dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/change_lang"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </RelativeLayout>

    <include
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/footer_layout" />

</RelativeLayout>